# MNIST

./: .gitignore  ConvNet.py  Makefile  Readme.md  SimpleNN.py  config.py  main.py  pyproject.toml  test.py  train.py
